changed to opulence

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
-    <title>intrepid.wtf</title>
+    <title>opulence.wtf</title>
   </head>
   <body>
     <div id="title">
-      <span>intrepid.</span>
+      <span>opulence.</span>
       <div class="social-icons">
         <a href="https://www.youtube.com/@traditionkeeper" target="_blank">
           <img src="assets/images/youtube.png" alt="YouTube" />
