footer changed too

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       </span>
     </div>
 
-    <footer id="footer">Copyright © 2024, intrepid.</footer>
+    <footer id="footer">Copyright © 2024, opulence.</footer>
     <script src="script.js"></script>
   </body>
 </html>
