--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="title">
-      <span>opulence.</span>
+      <span>opulenceee.</span>
       <div class="social-icons">
         <a href="https://www.youtube.com/@traditionkeeper" target="_blank">
           <img src="assets/images/youtube.png" alt="YouTube" />
@@ -44,7 +44,7 @@
       </span>
     </div>
 
-    <footer id="footer">Copyright © 2024, opulence.</footer>
+    <footer id="footer">Copyright © 2024, opulenceee.</footer>
     <script src="script.js"></script>
   </body>
 </html>
