added playpause/next/previous buttons and changed the playlist

--- a/index.html
+++ b/index.html
@@ -46,6 +46,17 @@
       </span>
     </div>
 
+    <!-- Controls for audio playback -->
+    <div id="audio-controls">
+      <img id="prev-button" src="assets/images/previous.png" alt="Previous" />
+      <img
+        id="play-pause-button"
+        src="assets/images/playpause.png"
+        alt="Play"
+      />
+      <img id="next-button" src="assets/images/next.png" alt="Next" />
+    </div>
+
     <footer id="footer">Copyright © 2024, opulenceee.</footer>
     <script src="script.js"></script>
   </body>
