removed loop from html tag + play next song

--- a/index.html
+++ b/index.html
@@ -33,11 +33,10 @@
       </div>
     </div>
 
-    <audio id="background-audio" loop>
+    <audio id="background-audio">
       <source src="assets/audio/end-up-gone.mp3" type="audio/mpeg" />
       Your browser does not support the audio element.
     </audio>
-
     <div id="time-control">
       <progress id="progress-bar" value="0" max="100"></progress>
       <div class="time">
