--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="title">
       <span>opulenceee.</span>
       <div class="social-icons">
-        <a href="https://www.youtube.com/@traditionkeeper" target="_blank">
+        <a href="https://www.youtube.com/@opulenceee" target="_blank">
           <img src="assets/images/youtube.png" alt="YouTube" />
         </a>
         <a
@@ -27,7 +27,7 @@
         >
           <img src="assets/images/steam.png" alt="Steam" />
         </a>
-        <a href="https://github.com/itsboombatz" target="_blank">
+        <a href="https://github.com/opulenceee" target="_blank">
           <img src="assets/images/github.png" alt="GitHub" />
         </a>
       </div>
