--- a/index.html
+++ b/index.html
@@ -3,62 +3,121 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="opulence.wtf - Personal website and music player"
+    />
     <link rel="stylesheet" href="styles.css" />
     <title>opulence.wtf</title>
     <link rel="icon" href="/assets/images/favicon.png" type="image/png" />
     <link rel="apple-touch-icon" href="/assets/images/favicon.png" />
-    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+
+    <!-- Preload critical assets -->
+    <link
+      rel="preload"
+      href="assets/fonts/JetBrainsMono-Regular.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin
+    />
+    <link rel="preload" href="assets/audio/end-up-gone.mp3" as="audio" />
+
+    <!-- Defer non-critical scripts -->
+    <script
+      src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"
+      defer
+    ></script>
   </head>
   <body>
-    <!-- Particles background -->
-    <div id="particles-js"></div>
+    <!-- Particles background with reduced motion preference -->
+    <div id="particles-js" class="particles-container"></div>
 
     <div id="title">
       <span>opulenceee.</span>
       <div class="social-icons">
-        <a href="https://www.youtube.com/@opulenceee" target="_blank">
-          <img src="assets/images/youtube.png" alt="YouTube" />
+        <a
+          href="https://www.youtube.com/@opulenceee"
+          target="_blank"
+          rel="noopener noreferrer"
+          aria-label="YouTube Channel"
+        >
+          <img src="assets/images/youtube.png" alt="YouTube" loading="lazy" />
         </a>
         <a
           href="https://discordapp.com/users/220880488875687936"
           target="_blank"
+          rel="noopener noreferrer"
+          aria-label="Discord Profile"
         >
-          <img src="assets/images/discord.png" alt="Discord" />
+          <img src="assets/images/discord.png" alt="Discord" loading="lazy" />
         </a>
         <a
           href="https://steamcommunity.com/profiles/76561198097792367/"
           target="_blank"
+          rel="noopener noreferrer"
+          aria-label="Steam Profile"
         >
-          <img src="assets/images/steam.png" alt="Steam" />
+          <img src="assets/images/steam.png" alt="Steam" loading="lazy" />
         </a>
-        <a href="https://github.com/opulenceee" target="_blank">
-          <img src="assets/images/github.png" alt="GitHub" />
+        <a
+          href="https://github.com/opulenceee"
+          target="_blank"
+          rel="noopener noreferrer"
+          aria-label="GitHub Profile"
+        >
+          <img src="assets/images/github.png" alt="GitHub" loading="lazy" />
         </a>
       </div>
     </div>
 
-    <audio id="background-audio">
-      <source src="assets/audio/end-up-gone.mp3" type="audio/mpeg" />
-      Your browser does not support the audio element.
-    </audio>
+    <div class="audio-player" role="region" aria-label="Audio Player">
+      <audio id="background-audio">
+        <source src="assets/audio/end-up-gone.mp3" type="audio/mpeg" />
+        Your browser does not support the audio element.
+      </audio>
 
-    <div id="time-control">
-      <progress id="progress-bar" value="0" max="100"></progress>
-      <div class="time">
-        <span id="current-time">0:00</span> / <span id="total-time">0:00</span>
+      <div id="time-control">
+        <progress
+          id="progress-bar"
+          value="0"
+          max="100"
+          aria-label="Audio progress"
+        ></progress>
+        <div class="time">
+          <span id="current-time">0:00</span> /
+          <span id="total-time">0:00</span>
+        </div>
       </div>
-    </div>
 
-    <div id="audio-controls">
-      <img id="prev-button" src="assets/images/previous.png" alt="Previous" />
-      <img id="play-pause-button" src="assets/images/play.png" alt="Play" />
-      <img id="next-button" src="assets/images/next.png" alt="Next" />
+      <div class="volume-control">
+        <input
+          type="range"
+          id="volume-slider"
+          min="0"
+          max="100"
+          value="50"
+          aria-label="Volume control"
+        />
+      </div>
+
+      <div id="audio-controls">
+        <button id="prev-button" aria-label="Previous track">
+          <img src="assets/images/previous.png" alt="" />
+        </button>
+        <button id="play-pause-button" aria-label="Play or pause track">
+          <img src="assets/images/play.png" alt="" />
+        </button>
+        <button id="next-button" aria-label="Next track">
+          <img src="assets/images/next.png" alt="" />
+        </button>
+      </div>
     </div>
 
     <footer id="footer">Copyright © 2024, opulenceee.</footer>
 
-    <!-- Scripts -->
-    <script src="particles-config.js"></script>
-    <script src="script.js"></script>
+    <!-- Config and main script -->
+    <script src="config.js" defer></script>
+    <script src="particles-config.js" defer></script>
+    <script src="script.js" defer></script>
   </body>
 </html>
