new button, discord tab, hostages window.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,24 @@
 
     <div id="title">
       <span>opulenceee.</span>
+      <!-- Navigation -->
+      <nav class="site-nav">
+        <ul>
+          <li><a href="/discord.html">Discord Bots</a></li>
+        </ul>
+      </nav>
       <div class="social-icons">
+        <a
+          href="https://buymeacoffee.com/opulenceee"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <img
+            src="assets/images/buymeacoffe.png"
+            alt="Buy Me A Coffee"
+            loading="lazy"
+          />
+        </a>
         <a
           href="https://www.youtube.com/@opulenceee"
           target="_blank"
@@ -112,6 +129,23 @@
         </button>
       </div>
     </div>
+
+    <!-- Hostages Button Section -->
+    <div id="bthn" lang="en"></div>
+    <script>
+      (function () {
+        var script = document.createElement("script");
+        script.type = "text/javascript";
+        script.src = "https://bringthemhomenow.net/1.1.0/hostages-ticker.js";
+        script.setAttribute(
+          "integrity",
+          "sha384-DHuakkmS4DXvIW79Ttuqjvl95NepBRwfVGx6bmqBJVVwqsosq8hROrydHItKdsne"
+        );
+        script.setAttribute("crossorigin", "anonymous");
+        document.getElementsByTagName("head")[0].appendChild(script);
+      })();
+    </script>
+    <!-- Hostages Button Section -->
 
     <footer id="footer">Copyright © 2024, opulenceee.</footer>
 
