added hostage window @ discord.html, too.

--- a/discord.html
+++ b/discord.html
@@ -231,7 +231,22 @@
         </div>
       </article>
     </main>
-
+    <!-- Hostages Button Section -->
+    <div id="bthn" lang="en"></div>
+    <script>
+      (function () {
+        var script = document.createElement("script");
+        script.type = "text/javascript";
+        script.src = "https://bringthemhomenow.net/1.1.0/hostages-ticker.js";
+        script.setAttribute(
+          "integrity",
+          "sha384-DHuakkmS4DXvIW79Ttuqjvl95NepBRwfVGx6bmqBJVVwqsosq8hROrydHItKdsne"
+        );
+        script.setAttribute("crossorigin", "anonymous");
+        document.getElementsByTagName("head")[0].appendChild(script);
+      })();
+    </script>
+    <!-- Hostages Button Section -->
     <!-- Footer -->
     <footer id="footer">
       <p>Copyright © 2024, opulenceee.</p>
