lsrp bot available for everyone

--- a/discord.html
+++ b/discord.html
@@ -157,12 +157,20 @@
           <li>Simple Discord command interface for status checks</li>
         </ul>
         <div class="bot-links">
-          <button class="private-link" onclick="showPrivateModal('LS-RP Bot')">
+          <a
+            href="https://discord.com/oauth2/authorize?client_id=1296788377684676668&permissions=8&integration_type=0&scope=applications.commands+bot"
+            class="private-link"
+            target="_blank"
+          >
             Add to Server
-          </button>
-          <button class="private-link" onclick="showPrivateModal('LS-RP Bot')">
+          </a>
+          <a
+            href="https://github.com/opulenceee/lsrp_discord_bot"
+            class="private-link"
+            target="_blank"
+          >
             View Repository
-          </button>
+          </a>
         </div>
       </article>
 
