lsrp bot is back to being private

--- a/discord.html
+++ b/discord.html
@@ -157,20 +157,12 @@
           <li>Simple Discord command interface for status checks</li>
         </ul>
         <div class="bot-links">
-          <a
-            href="https://discord.com/oauth2/authorize?client_id=1296788377684676668&permissions=8&integration_type=0&scope=applications.commands+bot"
-            class="private-link"
-            target="_blank"
-          >
+          <button class="private-link" onclick="showPrivateModal('LS-RP Bot')">
             Add to Server
-          </a>
-          <a
-            href="https://github.com/opulenceee/lsrp_discord_bot"
-            class="private-link"
-            target="_blank"
-          >
+          </button>
+          <button class="private-link" onclick="showPrivateModal('LS-RP Bot')">
             View Repository
-          </a>
+          </button>
         </div>
       </article>
 
