added lsrp calculator and faction manager

--- a/discord.html
+++ b/discord.html
@@ -61,6 +61,14 @@
     <!-- Header -->
     <header id="title">
       <span>Discord Bots</span>
+      <!-- Navigation -->
+      <nav class="site-nav">
+        <ul>
+          <li><a href="/index.html">Home</a></li>
+          <li><a href="/discord.html" class="active">Discord Bots</a></li>
+          <li><a href="/lsrp-calculator.html">LSRP Calculator</a></li>
+        </ul>
+      </nav>
       <div class="social-icons">
         <a
           href="https://buymeacoffee.com/opulenceee"
