--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
       <!-- Navigation -->
       <nav class="site-nav">
         <ul>
-          <li><a href="/discord.html">Discord Bots</a></li>
+          <li><a href="/discord">Discord Bots</a></li>
+          <li><a href="/lsrp-calculator">LSRP Calculator</a></li>
+          <li><a href="/faction-manager">Faction Manager</a></li>
         </ul>
       </nav>
       <div class="social-icons">
